# meson-pixman

./: meson.build  pixman.def
build-aux/: gendef.ps1
